# research_assistant

./: .cz.toml  .env.example  .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  TROUBLESHOOTING.md  USAGE.md  __init__.py  bump_version.sh  check_install.py  cli.py  config.example.yaml  config.py  example.py  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_assistant.sh  test_rate_limiter.py  test_summary_truncation.py  test_taxonomy.py
.github/workflows/: ci.yml  publish.yml
cache/: __init__.py  cache_manager.py
core/: category_validator.py  classifier.py  dedup.py  embeddings.py  inventory.py  manifest.py  metadata.py  mover.py  outputs.py  parser.py  scoring.py  summarizer.py  taxonomy.py
tests/: conftest.py  test_cache.py  test_category_validator.py  test_cli.py  test_config.py  test_dedup.py  test_gemini_client.py  test_hash.py  test_integration.py  test_llm_provider.py  test_manifest.py  test_metadata.py  test_mover.py  test_outputs.py  test_parser.py  test_pipeline_integration.py  test_rate_limiter.py  test_scoring.py  test_summarizer.py  test_taxonomy.py  test_text.py
utils/: cache_manager.py  gemini_client.py  grobid_client.py  hash.py  llm_provider.py  rate_limiter.py  text.py
